--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,10 @@
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
+  <script
+    src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+    integrity="sha256-4+XzXVhsDmqanXGHaHvgh1gMQKX40OUvDEBTu8JcmNs="
+    crossorigin="anonymous"></script>
   <script type="text/javascript" src="/js/owl.carousel.min.js"></script>
   <script type="text/javascript" src="/js/main.js"></script>
 </body>
